kubernetes/apps/network/envoy-gateway/config/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-0
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: domain-0-prod-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-external
spec:
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s

# ---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: envoy-external
spec:
  clientIPDetection:
    xForwardedFor:
      trustedCIDRs:
        - 10.244.0.0/16
  # http2:
  #   onInvalidMessage: TerminateStream
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
  tcpKeepalive: {}
  tls:
    minVersion: "1.2"
    alpnProtocols:
      - h2
      - http/1.1

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
