kubernetes/apps/network/envoy-gateway/config/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-flux
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-operator
  oidc:
    provider:
      issuer: "https://auth.${SECRET_DOMAIN_0}/application/o/envoy-gateway/"
    clientID: "${AUTHENTIK_OIDC_CLIENT_ID}"
    clientSecret:
      name: authentik-oidc-secret
    redirectURL: "https://flux.${SECRET_DOMAIN_0}/oauth2/callback"
    scopes:
      - openid
      - profile
      - email
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-longhorn
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn
  oidc:
    provider:
      issuer: "https://auth.${SECRET_DOMAIN_0}/application/o/envoy-gateway/"
    clientID: "${AUTHENTIK_OIDC_CLIENT_ID}"
    clientSecret:
      name: authentik-oidc-secret
    redirectURL: "https://longhorn.${SECRET_DOMAIN_0}/oauth2/callback"
    scopes:
      - openid
      - profile
      - email
